# algo_backtester

./: .gitignore  README.md  pyproject.toml  requirements.txt
backtesting/: HigherLower.py  IntradayMeanRev.py  SRS141.py  __main__.py  create_signal_orders.py  uniform.py
backtesting/data/strategy_results/: HigherLower_240min.csv  SRS_1min-btc.csv  view_df.csv
backtesting/data_wrangling/ingestion/: ingest_1min.py
backtesting/data_wrangling/integration/: append_csv.py
backtesting/data_wrangling/transformation/: add_sigtime.py  change_resolution.py  convert_timezone.py  convert_to_weekly_ohlc.py  generate_orders.py  resample_weekly_timestamp.py  slice_data.py
backtesting/feature_engineering/: cleaning.py  data_wrangling.py  feature_creation.py  feature_selection.py
backtesting/feature_engineering/utils/: add_sigtime.py  add_time_columns.py  historical_data.txt  ingest.py
backtesting/strategies/: ASRS141.py  AVW141.py  BTCMC3.py  BTCMC800.py  BTCSRS800.py  BTCVW141fade.py  HigherLower.py  MomentumRSI.py  NewYorkMC.py  PolyTimeTrend.py  RVW.py  RVW_bear.py  RVW_bull.py  RipVanWinkle.py  SRS141.py  TheWeeklyChill.py  TheWeeklyChillBear.py  TheWeeklyChillBull.py  TheWeeklyChill_v2.py  VW141.py  uniform.py
backtesting/strategy_results/: HigherLower_120min.csv  HigherLower_60min.csv
backtesting/tools/: backtest.py  logger.py
backtesting/utils/: backtest_engine.py  backtest_stats.py  backtest_visuals.py  datamanager.py
backtesting/visualisation/: run.py
backtesting/visualisations/: plots.py
data_wrangling/feature_engineering/: generate_orders.py
