[tool.poetry]
name = "backtester"
version = "0.1.0"
description = "A backtesting engine for testing trading strategies."
authors = ["Rez <rez@codeblock.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = ">1"
websockets = "9.1"
numpy = ">1"
matplotlib = ">3"
seaborn = "0.12.2"
pytz = "2022.7"
mplfinance = "0.12.10b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
